<?xml version="1.0"?>
<package format="3">
  <name>sensor_publisher_pkg</name>
  <version>0.0.0</version>
  <description>Publishes synthetic sensor data on /sensor_value.</description>
  <maintainer email="maintainer@example.com">Mehmet Akif Vardar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
